2.0.1 (re)Release: (Tweaked about page to include Atmos version) - Directory selection page (in Move dialog) now scrolls - About page now shows available features (from service info) - File list now supports shift-click! - Fixed bug in ACL removal

--- a/trunk/AtmosJSBrowser/WebContent/css/atmos-browser.css
+++ b/trunk/AtmosJSBrowser/WebContent/css/atmos-browser.css
@@ -79,6 +79,12 @@ input.longField {
     z-index: 10000;
     padding: 8px;
     text-align: center;
+    font: 13px Arial, sans-serif;
+}
+
+#atmosAboutPage .atmosAboutTitle {
+    font-size: 14px;
+    font-weight: bold;
 }
 
 #atmosAboutPage .featureList {
@@ -89,7 +95,7 @@ input.longField {
     background-color: #fff;
     padding: 4px;
     text-align: center;
-    font-size: 10pt;
+    font-size: 12px;
 }
 
 #atmosAboutPage li {
